# sputter

./: .gitignore  CMakeLists.txt  README.md  TODO
assets/shaders/: cube_frag.glsl  cube_vert.glsl  line_frag.glsl  line_vert.glsl  sprite_frag.glsl  sprite_vert.glsl  volume_text_frag.glsl  volume_text_vert.glsl
cmake/: SputterInc.cmake
rooms/: .gitignore  README.md  mix.exs
rooms/lib/: bucket.ex  registry.ex  rooms.ex  supervisor.ex
rooms/test/: bucket_test.exs  registry_test.exs  (+1 more)
scripts/: aliases.sh  build_linux.sh  build_windows.bat  env.sh  sputrc.sh
src/: CMakeLists.txt
src/lib/sputter/: CMakeLists.txt
src/lib/sputter/assets/: assetdata.h  assetstorage.cpp  assetstorage.h  assetstorageprovider.cpp  assetstorageprovider.h  binarydata.h  binaryfilereader.cpp  binaryfilereader.h  imagedata.h  pngreader.cpp  pngreader.h  resourcestorage.cpp  resourcestorage.h  resourcestoragetype.h  textdata.h  textfilereader.cpp  textfilereader.h
src/lib/sputter/containers/: arrayvector.h  circularbuffer.h  fixedmemoryvector.h
src/lib/sputter/core/: buffer.cpp  buffer.h  check.h  cliargument.cpp  cliargument.h  cliargumentparser.cpp  cliargumentparser.h  component.cpp  component.h  debugsettings.cpp  debugsettings.h  functor.cpp  functor.h  functorstorage.cpp  functorstorage.h  scopedtimer.cpp  scopedtimer.h  serializable.cpp  serializable.h  serializedframestorage.cpp  serializedframestorage.h  serializer.cpp  serializer.h  subsystem.h
src/lib/sputter/game/: game.h  object.cpp  object.h  objectstorage.cpp  objectstorage.h  scene.h  scenestack.cpp  scenestack.h  subsystemprovider.cpp  subsystemprovider.h  subsystemtype.h  tickdriver.h  timersystem.cpp  timersystem.h  world.cpp  world.h
src/lib/sputter/input/: inputdevice.h  inputsource.cpp  inputsource.h  inputsubsystem.cpp  inputsubsystem.h  keyboarddevice.cpp  keyboarddevice.h  remotedevice.cpp  remotedevice.h
src/lib/sputter/log/: framestatelogger.cpp  framestatelogger.h  log.cpp  log.h
src/lib/sputter/math/: fixedpoint.cpp  fixedpoint.h  fpconstants.h  fpmatrix4d.cpp  fpmatrix4d.h  fptransform3d.cpp  fptransform3d.h  fpvector2d.cpp  fpvector2d.h  fpvector3d.cpp  fpvector3d.h  vector2d.cpp  vector2d.h  vector2i.cpp  vector2i.h
src/lib/sputter/memory/: fixedmemoryallocator.cpp  fixedmemoryallocator.h  reservedregion.cpp  reservedregion.h  sptr.h
src/lib/sputter/net/: channel.cpp  channel.h  messagepool.cpp  messagepool.h  messageprotocol.cpp  messageprotocol.h  net.h  port.cpp  port.h  protocol.cpp  protocol.h  reliableudpserver.cpp  reliableudpserver.h  reliableudpsession.cpp  reliableudpsession.h
src/lib/sputter/physics/: aabb.cpp  aabb.h  collision.cpp  collision.h  collisionresult.h  collisionshape.h  collisionsubsystem.cpp  collisionsubsystem.h  rigidbody2d.cpp  rigidbody2d.h  rigidbodysubsystem.cpp  rigidbodysubsystem.h
src/lib/sputter/render/: .spritebatch.h.swo  attribute.cpp  attribute.h  camera.cpp  camera.h  color.cpp  color.h  draw.cpp  draw.h  drawshapes.cpp  drawshapes.h  font.cpp  font.h  fontstorage.cpp  fontstorage.h  geometry.cpp  geometry.h  glyph.cpp  glyph.h  indexbuffer.cpp  indexbuffer.h  mesh.cpp  mesh.h  meshconstants.h  meshsubsystem.cpp  meshsubsystem.h  rasterizer.cpp  rasterizer.h  render.h  shader.cpp  shader.h  shaderstorage.cpp  shaderstorage.h  sprite.cpp  sprite.h  spritebatch.cpp  spritebatch.h  spriteshader.cpp  spriteshader.h  spritesubsystem.cpp  (+14 more)
src/lib/sputter/system/: system.cpp  system.h  time.cpp  time.h
src/lib/sputter/system/platform/: time_linux.cpp  time_windows.cpp
src/lib/sputter/ui/: button.cpp  button.h  element.cpp  element.h  events.cpp  events.h  modalpopup.cpp  modalpopup.h  navigation.h  screen.cpp  screen.h  theme.h  widget.cpp  widget.h
src/test/sputter/net/: CMakeLists.txt  udpsession_tests.cpp
(+58 files in other folders)
